--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calculator.CSS">
-    <title>Calculator - By Pradeep Kumar</title>
+    <title>Calculator - By Lalit kumar</title>
     <link rel="stylesheet" href="calculator.CSS">
 </head>
 
